# lpt2d

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  IDEAS.md  OPTIMIZATION_LOG.md  README.md  ROADMAP.md  SEED_TOGGLE_PROMPT.md  _lpt2d.pyi  autoresearch-results.md  benchmark-compare.sh  benchmark.sh  pyproject.toml  test.json
anim/: __init__.py  analysis.py  builders.py  colors.py  diagnostics.py  easing.py  examples_support.py  family.py  geometry.py  light_analysis.py  params.py  renderer.py  stats.py  track.py  types.py
anim/examples/: ANIMATION_WORKLOG.md  _clean_room_factories.py  _clean_room_registry.py  _clean_room_shared.py  chromatic_kaleidoscope.py  clean_room_aperture_waltz.py  clean_room_arc_bloom.py  clean_room_arc_lantern.py  clean_room_arc_resonator.py  clean_room_arc_resonator_dual_beam.py  clean_room_audit.py  clean_room_beam_exchange.py  clean_room_breathing_lenses.py  clean_room_bridge_ribbon.py  clean_room_caustic_ladder.py  clean_room_caustic_stair.py  clean_room_corner_crossfire.py  clean_room_counter_rotor.py  clean_room_crescent_duet.py  clean_room_doublet_grid.py  clean_room_dual_ribbon.py  clean_room_focus_columns.py  clean_room_gallery.py  clean_room_halo_lenses.py  clean_room_iris_gate.py  clean_room_lens_quartet.py  clean_room_louver_fan.py  clean_room_mirror_compass.py  clean_room_mirror_fan.py  clean_room_mirror_shutters.py  clean_room_orbiting_crescents.py  clean_room_orbiting_triplet.py  clean_room_prism_bridge.py  clean_room_prism_constellation.py  clean_room_prism_crown.py  clean_room_prism_drum.py  clean_room_prism_parade.py  clean_room_prism_sweep.py  clean_room_resonator_weave.py  clean_room_ribbon_exchange.py  (+14 more)
anim/examples/clean_room_families/: __init__.py  arc_family.py  beacon_family.py  canopy_family.py  cloister_family.py  fin_family.py  gate_family.py  hybrid_family.py  lens_family.py  mandala_family.py  orbital_family.py  prism_family.py  ribbon_family.py  rotor_family.py  spine_family.py  splitter_family.py  truss_family.py  vault_family.py  well_family.py
anim/examples/secondary/: README.md  chromatic_kaleidoscope.py  clean_scanning_reflective_field.py  layered_orbiting_beam.py  orbiting_beam.py  prism_sweep.py  prism_sweep_generator.py  twin_prisms_vertical_swap.py
bench/: AGENT_PROMPT.md  README.md  bench.sh  metrics.py  stats_budget.py
bench/scenes/: bench_all_shapes.json  bench_arc_focus.json  bench_bezier_waveguide.json  bench_deep_bounce.json  bench_dense_grid.json  bench_dispersion_fan.json  bench_glass_sphere.json  bench_grazing.json  bench_mirror_hall.json  bench_mixed_materials.json  bench_prism_beam.json  bench_tir_trap.json  manifest.json
cmake/: embed_shaders.cmake  static_analysis.cmake
docs/: AUTHORED.md  AUTHORED_V5.md  AUTHORED_V6.md  AUTHORED_V7.md  BUG_AUTO_SMOOTH_CONCAVE.md  FAMILY_API.md  FAMILY_API_IMPROVEMENTS.md  FILL_SEMANTICS.md  FRAME_ANALYSIS.md  GLOSSARY.md  GUI_UX.md  LIGHT_RADIUS_DETECTOR_HISTORY.md  OUTLINE_JOIN_DISCUSSION_20260408.md  OUTLINE_JOIN_SEMANTICS.md  PHASE2_REVIEW_INVENTORY.md  README.md  RENDER_SPEED_AUTORESEARCH_20260407.md  ROADMAP_GUIDELINES.md  SEED_MODE.md  TESTING_ANALYSIS.md  TESTING_PHILOSOPHY.md  VISUAL_ITERATION.md  VPS_IMAGE_GALLERIES.md  animation_guidelines.md
evaluation/: README.md  __init__.py  __main__.py  animate.py  baseline.py  compare.py  image_metrics.py  timing.py
evaluation/scenes/: crystal_field.json  manifest.json  solid_surface_gallery.json  three_spheres.json
examples/: README.md
examples/experiments/: pentagon_fillet_point_lamp.py  post_process_sweep.py
examples/python/: beam_chamber_starter.py  prism_crown_builder.py  prism_sweep.py  prism_sweep_generator.py  solid_surface_gallery.py  thick_arc_demo.py  three_spheres_center_zoom.py  twin_prisms_scene_patch.py
examples/python/families/: crystal_field.py  crystal_pendulum.py  fractal_tree.py  glass_turbine.py  hexfield.py  lens_caustics.py  lens_chain.py  light_circle.py  nested_arcs.py  (+9 more)
renders/: README.md
renders/clean_room/: family_representatives.json  family_representatives_top3.json  library_audit.json  manifest.json
scenes/: crystal_field.json  diamond.json  double_slit.json  fiber.json  lens.json  mirror_box.json  mirrors.json  prism.json  ring.json  three_spheres.json  twin_prisms.json
src/: app.cpp  app.h  editor.cpp  export.cpp  headless.cpp  headless.h  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  scenes.h  spectrum.cpp  tracer.cpp  tracer.h
src/app/: app.cpp  app.h  app_actions.cpp  app_actions.h  app_panels.cpp  app_panels.h  editor.cpp  editor.h  main.cpp  ui.cpp  ui.h
src/bindings/: lpt2d_bindings.cpp
src/cli/: headless.cpp  main.cpp
src/core/: color.cpp  color.h  export.h  geometry.cpp  geometry.h  gl_shader_utils.cpp  gl_shader_utils.h  gpu_image_analysis.cpp  gpu_image_analysis.h  headless.cpp  image_analysis.cpp  image_analysis.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scenes.cpp  scenes.h  serialize.cpp  serialize.h  serialize_json.cpp  session.cpp  session.h  spectrum.cpp  spectrum.h
src/shaders/: analysis.comp  fill.frag  fill.vert  line.frag  line.vert  max_reduce.comp  postprocess.frag  postprocess.vert  trace.comp
tests/: _metrics_fixtures.py  test_additive_lights.py  test_animation_improvements.py  test_authored.py  test_authored_v5.py  test_authored_v6.py  test_auto_look_logic.py  test_builders.py  test_canonical_examples.py  test_cli_stream_rays.py  test_evaluation.py  test_half_float.py  test_image_analysis.py  test_intensity_normalization.py  test_path.py  test_physics.py  test_polygon_fill.py  test_postprocess_replay.py  test_resolution_independence.py  test_scene_defaults.py  test_smooth_shading.py  test_stats.py  test_workflow.py
tests/cpp/: test_color.cpp  test_geometry.cpp  test_gpu_image_analysis.cpp  test_harness.h  test_image_analysis.cpp  test_scene.cpp
tests/crystal_field/: test_catalog_uses_check.py  test_check_dashboard.py  test_constraint_guards.py  test_look_config_roundtrip.py  test_materials.py  test_overlay.py  test_rejection_policy.py  test_sampling_policy.py  test_study_dataset.py
(+36 files in other folders)
