[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "lpt2d"
version = "0.1.0"
description = "Python animation and benchmark tooling for lpt2d"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.0",
    "ruff>=0.11.10",
    "scikit-build-core>=0.10",
    "nanobind>=2.0",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["anim", "evaluation"]

[tool.ruff]
exclude = ["external"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["anim", "evaluation"]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.uv]
exclude-newer = "7 days"
